# gptest

./: .gitignore  README.md  pyproject.toml
gptest/: README.md  test.py
gptest/backbone/: attention.py  common.py  ffn.py  gpt.py  sdpa.py
gptest/configs/: base_config.yaml
gptest/data/: dataloader.py  dataset.py
gptest/evals/: base_eval.py  bpb_loss_eval.py
gptest/inference/: engine.py  kv.py  test_engine.py  utils.py
gptest/optimizers/: adamw.py
gptest/scripts/: train.py
gptest/tokenizer/: tok_train.py  tokenizer.py
gptest/training/: loss.py  trainer.py  utils.py
gptest/utils/: checkpoint.py  ddp_utils.py  gpu_utils.py  logger.py  utils.py
scripts/: base_eval.py  base_train.py  tok_train.py  train_start.sh
src/: attention.py  checkpoint_manager.py  common.py  config.yaml  dataloader.py  dataset.py  evaluate.py  gpt.py  sdpa.py  test.py  tokenizer.py  utils.py
tokenizer/: token_bytes.pt  tokenizer.json
