[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptest"
version = "0.0.1"
description = "gpt effects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy", 
    "matplotlib",
    "tqdm",
    "transformers==4.57.3",
    "accelerate==1.12.0",
    "ipython==9.8.0",
    "hf-transfer==0.1.9",
    "bitsandbytes>=0.41.0",
    "wandb==0.23.1",
    "python-dotenv>=1.0.0",
    "hydra-core==1.3.2",
]

