[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptest"
version = "0.0.1"
description = "gpt effects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.12.0",
    "bitsandbytes>=0.41.0",
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "hf-transfer==0.1.9",
    "hydra-core==1.3.2",
    "ipykernel>=7.1.0",
    "ipython==9.8.0",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy", 
    "psutil>=7.1.0",
    "python-dotenv>=1.2.1",
    "regex>=2025.9.1",
    "rustbpe>=0.1.0",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch>=2.9.0",
    "tqdm",
    "transformers>=4.57.3",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
    "zstandard>=0.25.0",
]

